問題推薦機能のコントロラ, ビューを作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,8 @@
 ja:
+  recommend:
+    easy: 'イージー(90%の確率で解ける)'
+    normal: 'ノーマル(70%の確率で解ける)'
+    hard: 'ハード'
   activerecord:
     models:
       admin: '管理者'
